cabal-version:       3.0
name:                traffic-parser
version:             0.1.0.0
license:             NONE
author:              Alexander Bich
maintainer:          code@quyse.net
category:            Tool
build-type:          Simple

library
  hs-source-dirs:      src
  exposed-modules:
    AhoCorasic
    Parser
    SecretExpansion
    Types
  other-modules:
  build-depends:
    aeson
    , base
    , bytestring
    , conduit
    , containers
    , cryptonite
    , exceptions
    , hashable
    , memory
    , mono-traversable
    , mtl
    , text
    , transformers
    , unordered-containers
    , vector
    , xml-conduit
    , xml-types
  ghc-options:         -Wall
  default-language:    Haskell2010

executable traffic-parser
  hs-source-dirs:      exe
  main-is:             traffic-parser.hs
  other-modules:
  build-depends:
    aeson
    , base
    , bytestring
    , conduit
    , data-default
    , memory
    , optparse-applicative
    , text
    , traffic-parser
    , unordered-containers
    , xml-conduit
  ghc-options:         -Wall
  default-language:    Haskell2010
